--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,77 +1,60 @@
-<section id="presentation-2">
+<section id="abonnements">
   <%= render :partial => "shared/flash_messages" %>
   
   <div class="container">
-	<div class="row" id="presentation1">
-		<%= image_tag("presentation-centrale4-01.png")%>
-	</div>
 	<div class="row">
 		<div class="row" id="intro">
-			Argumente. Conteste. Vote. Défie. Juge. Débats.	
+			Les questions fréquemment posées.
+		</div>
+	</div>
+	</br>
+	</br>
+	<div class="row">
+		<div class="row" id="faqq">
+			<div  class="blanc">
+			</div>
+			<div class="bleu">
+			</div>
+			<div class="titre">
+				Au fait, Moutoners c'est quoi ?
+			</div>
+			<div class="texte">
+				Moutoners est un réseau social entièrement dédié au débat et à l'échange d'idées.
+				Nous essayons de garder une ligne éditoriale de qualité, pour élever le débat 
+			</div>
 		</div>
 	</div>
 	
 	<div class="row">
-      <div class="span11" id ="holy">
-	   <div id="video">
-	     <div id="connecte">
-	   			<div class="row" id="lesphotos">
-					<%= link_to image_tag('defisb.jpg'), dialectiques_path, class: "image1-expl"%>
-					<%= link_to image_tag('defisbleu.jpg'), dialectiques_path, class: "image2-expl"%>
-	   			</div>
-	   			<div class="row" id="lesphotos">
-					<%= link_to image_tag('expertsb.jpg'), dialectiques_path, class: "image1-expl"%>
-					<%= link_to image_tag('expertsbleu.jpg'), dialectiques_path, class: "image2-expl"%>
-	   			</div>
-	   			<div class="row" id="lesphotos">
-					<%= link_to image_tag('ouvertb.jpg'), dialectiques_path, class: "image1-expl"%>
-					<%= link_to image_tag('ouvertbleu.jpg'), debats_path, class: "image2-expl"%>					
-	   			</div>			
-	     </div>
-	     <div id="video2_0">
-	   		<div class="intro"><%= @citations2.first[0] %></div>
-	   		<div class="introduction1">
-	   		<span class="texte"><%= @citations2.first[1] %></span>
-	   		</div>
-       
-	   		<%= image_tag("fleche-droite.png", class: "fleche10")%>
-	   		<div class="texte2"><%= @citations2.first[2] %></div>
-	     </div>
-	     <div id="video2_01">
-	   		<div class="intro"><%= @citations2.second[0] %></div>
-	   		<div class="introduction1">
-	   		<span class="texte"><%= @citations2.second[1] %></span>
-	   		</div>
-       
-	   		<%= image_tag("fleche-droite.png", class: "fleche11")%>
-	   		<div class="texte2"><%= @citations2.second[2] %></div>
-	     </div>
-	     <div id="video2_02">
-	   		<div class="intro"><%= @citations2.third[0] %></div>
-	   		<div class="introduction1">
-	   		<span class="texte"><%= @citations2.third[1] %></span>
-	   		</div>
-       
-	   		<%= image_tag("fleche-droite.png", class: "fleche12")%>
-	   		<div class="texte2"><%= @citations2.third[2] %></div>
-	     </div>
-	     <div id="video2_03">
-	   		<div class="intro"><%= @citations2.last[0] %></div>
-	   		<div class="introduction1">
-	   		<span class="texte"><%= @citations2.last[1] %></span>
-	   		</div>
-       
-	   		<div class="texte2"><%= @citations2.last[2] %></div>
-	     </div>
-	   </div>
-	  </div>
+		<div class="row" id="faqq">
+			<div  class="blanc">
+			</div>
+			<div class="bleu">
+			</div>
+			<div class="titre">
+				Au fait, Moutoners c'est quoi ?
+			</div>
+			<div class="texte">
+				Moutoners est un site entièrement dédié au débat. Nous essayons de garder une ligne éditoriale de qualité, pour élever le débat 
+			</div>
+		</div>
 	</div>
 
-	
-	<div class="row" id="presentation1">
-		<%= link_to(image_tag("presentation-centrale5-01.png"), presse_path)%>
+
+	<div class="row">
+		<div class="row" id="faqq">
+			<div  class="blanc">
+			</div>
+			<div class="bleu">
+			</div>
+			<div class="titre">
+				Quelle est la différence entre un Défi et un Débat Ouvert?
+			</div>
+			<div class="texte">
+				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 
+			</div>
+		</div>
 	</div>
-	
   </div>
 
 </section>
