--- a/app/views/static_pages/presse.html.erb
+++ b/app/views/static_pages/presse.html.erb
@@ -29,10 +29,6 @@
 		<div class="cadre13">
 			<div class="sous-titre">
 				De nombreux forums politiques, mais sclérosés.
-				</br></br>
-				Les commentaires sur les pages facebook en augmentation de 7%.
-				</br></br>
-				Schisme dans les médias : offre freemium: service et ligne éditoriale de qualités; ou alors l'hégémonie du clic.
 			</div>
 		</div>
 		
@@ -43,7 +39,7 @@
 			<div class="sous-titre">
 				Les colloques politiques en nette perte d'affluence ces 5 dernières années.
 				</br></br>
-				Le nombre de rencontres et débats artistiques augmente environ de 5% sur les 3 dernières années.
+				Le nombre de rencontres et débats artistiques augmente.
 			</div>
 		</div>
 		
@@ -56,9 +52,9 @@
 		</div>
 		<div class="cadre13">
 			<div class="sous-titre">
-				Emergence de nouveaux sites de débats sur les deux dernières années. Notamment en France.
+				Emergence de nouveaux sites de débats sur les deux dernières années.
 				</br></br>
-				Les sites d'informations se dotent de leurs propres plateformes de débat dans le monde.
+				Les sites d'informations se dotent de leurs propres plateformes de débat.
 			</div>
 		</div>
 		<div class="offre1">
@@ -66,9 +62,9 @@
 		</div>
 		<div class="cadre13">
 			<div class="sous-titre">
-				Newsring, concurrent surpuissant, mais en crise. Comparativement ne donne accès qu'aux débats "ouverts".
+				Newsring, concurrent surpuissant.
 				</br></br>
-				Le Monde, lance sa propre plateforme de débats, en Janvier 2014. Comparativement, ils n'auront que des débats "experts".
+				Le Monde, lance sa propre plateforme de débats, en Janvier 2014.
 			</div>
 		</div>
 		
@@ -110,8 +106,188 @@
 		</div>
 	</div>
 	
+	<div class="row">
+		<div class="row" id="abobo">
+			Beta Test - Retour client
+		</div>
+	</div>
+	
+	<div class="row" id="pousse-milieu">
+		<%= render "shared/argument_neutre_badge", argument: @argument3 %>
+	</div>
+	<div class="row" id="pousse-milieu">
+		<%= render "shared/argument_neutre_badge", argument: @argument4 %>
+	</div>
+	
+	
+	
+	
+	
+  </div>
+
+</section>
+<section id="abonnements">
+  <%= render :partial => "shared/flash_messages" %>
+  
+  <div class="container">
 	<div class="row" id="presentation1">
-		<%= link_to(image_tag("presentation-centrale7-01.png"), abonnements_path)%>
+		<%= image_tag("presentation-centrale8-01.png")%>
+	</div>
+	<div class="row">
+		<div class="row" id="intro">
+			Venez vous faire tondre.
+		</div>
+		<div class="row" id="abobo">
+			Abonnez-vous !
+		</div>
+	</div>
+    <div class="row">
+      <div class="span4" id ="petit-abo">
+		<div class="offre2">
+			Offre "mouton libre"
+		</div>
+		<div class="cadre13">
+			<div class="titre">
+			2€ par mois.
+			</div>
+			<div class="sous-titre">
+			sans engagements
+			</div>
+		</div>
+	  </div>
+      <div class="span4" id ="grand-abo">
+		<div class="offre2">
+			Offre "instinct grégaire"
+		</div>
+		<div class="cadre13">
+			<div class="titre">
+			13€ par an.
+			</div>
+			<div class="sous-titre">
+			sans engagements
+			</div>
+		</div>
+	  </div>
+    </div>
+<div class="row" id="isabelle"><%= image_tag("tout-gratuit-01.png", class: "image")%></div>
+	<div class="row" id="promesses">
+		Pas de publicité,</br>Pas de parrainage,</br>Pas de sponsors.
+	</div>
+	<div class="row">
+		<div class="row" id="intro2">
+		Nous ne ferons jamais commerce de vos informations.
+		</div>
+	</div>
+	<div class="row" id="abobo1">
+		Pourquoi s'abonner?
+	</div>
+	<div class="row" id="raison1">
+		<div class="circle">
+			<%=image_tag("billetboule-01.png", class: "image")%>
+			<div class="text">1</div>
+		</div>
+		<div class="text2">Avoir accès à tous les débats, les groupes,
+		les événements et les fonctionnalités de Moutoners.
+		</div>
+	</div>
+	<div class="row" id="raison2">
+		<div class="circle">
+			<%=image_tag("billetboule-01.png", class: "image")%>
+			<div class="text">2</div>
+		</div>
+		<div class="text2">Faire partie du cercle fermé des débatteurs Moutoners.
+		</div>
+	</div>
+	<div class="row" id="raison3">
+		<div class="circle">
+			<%=image_tag("billetboule-01.png", class: "image")%>
+			<div class="text">3</div>
+		</div>
+		<div class="text2">Nous aider à maintenir une ligne éditorialede qualité, en étant indépendant de la pub !
+		</div>
+	</div>
+	
+	<div class="row" id="photo-abonnement">
+	<%= image_tag('moutons-abonnement.png', :alt => 'Moutoners') %>
+	</div>
+  </div>
+
+</section>
+<section id="presentation-1">
+  <%= render :partial => "shared/flash_messages" %>
+  
+  <div class="container">
+	<div class="row" id="presentation1">
+		<%= image_tag("presentation-centrale11-01.png")%>
+	</div>
+	<div class="row">
+		<div class="row" id="abobo">
+			Stratégie d'acquisition BtoB:</br>
+			Les Médias, Les Think Tank</br>
+			et l'Education
+		</div>
+	</div>
+  	
+	<div class="row" id="raison1">
+		<div class="circle">
+			<%=image_tag("billetboule-01.png", class: "image")%>
+			<div class="text">1</div>
+		</div>
+		<div class="text2"><h2>Les Médias:</h2>Nous discutons avec plusieurs médias actuellement pour un partenariat avec Moutoners. En échange d'une API Moutoners, ils organisent des débats conjointement sur Moutoners et leur site web.
+		</div>
+	</div>
+	
+	<div class="row" id="photo-abonnement1">
+	<%= image_tag('graphe-01.png', :alt => 'Moutoners') %>
+	</div>
+	
+	<div class="row" id="raison1">
+		<div class="circle">
+			<%=image_tag("billetboule-01.png", class: "image")%>
+			<div class="text">2</div>
+		</div>
+		<div class="text2"><h2>Les Think Thank</h2>Suite aux recommandations du jury précédent, nous avons entamé des discussions avec des partis politiques et des think tank. Nous avons trouvé certains prêts à un accord, pour avoir leur propre groupe et tous leurs adhérents détenteurs d'un compte premium.
+		</div>
+	</div>
+	<div class="row" id="raison1">
+		<div class="circle">
+			<%=image_tag("billetboule-01.png", class: "image")%>
+			<div class="text">3</div>
+		</div>
+		<div class="text2"><h2>Les Universités</h2>Pour l'éducation et notamment les devoirs en langues étrangères, Moutoners pourraient être utile ! Nous allons proposer aux professeurs des groupes secrets, que seul les personnes qui y seront invités pourront voir. Ainsi ils pourront débattre, discuter, se défieret se corriger entre eux.
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="row" id="abobo">
+			Stratégie d'acquisition BtoC:</br>
+			Viralité, Tournoi, Joutes
+		</div>
+	</div>
+	
+	<div class="row" id="raison1">
+		<div class="circle">
+			<%=image_tag("billetboule-01.png", class: "image")%>
+			<div class="text">1</div>
+		</div>
+		<div class="text2"><h2>Viralité</h2>
+			Suite
+		</div>
+	</div>
+	
+  </div>
+
+</section>
+<section id="presentation-1">
+  <%= render :partial => "shared/flash_messages" %>
+  
+  <div class="container">
+	<div class="row" id="presentation1">
+		<%= image_tag("presentation-centrale12-01.png")%>
+	</div>
+	
+	<div class="row" id="presentation1">
+		<%= link_to(image_tag("presentation-centrale13-01.png"), help_path)%>
 	</div>
 	
   </div>
