--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -69,12 +69,23 @@
 				</div>
 				<div class="row" id='submit-challenge'>
 						<%= f.submit "Créér le débat", class: "action" %>
-						<% end %>
+						
 				</div>
 					
 				</div>
 			</div>
 		</div>
 	</div>
+	</div>
+	<div class="row">
+		<div class="row" id ="openning-context">
+			<div class="texte">Rajouter un contexte</div>
+			<div class="arrow-down-context"></div>
+			<div class="arrow-up-context"></div>
+		</div>
+		<div class "row" id="to-be-closed">
+			<div id="effective-context"><div class="text"><%= f.text_area :context, :class => 'edit2'%></div></div>
+			<% end %>
+		</div>
 	</div>
 </section>
