--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<h2>Create a debate</h2>
 	
-	<%= render "debates/form", value: nil, debate: @debate, group: 0%>
+	<%= render "debates/form", value: nil, debate: @debate, group: "0"%>
 	</br>
 	</br>
 	
