--- a/app/views/debates/_form.html.erb
+++ b/app/views/debates/_form.html.erb
@@ -58,7 +58,7 @@
 			<div class="arrow-up-context"></div>
 		</div>
 		<div class "row" id="to-be-closed">
-			<div id="effective-context"><div class="text"><%= f.text_area :content, :class => 'edit2'%></div></div>
+			<div id="effective-context"><div class="text"><%= f.text_area :context, :class => 'edit2'%></div></div>
 		</div>
 	</div>
 	
