--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -10,7 +10,7 @@
 						
 					    <div class="image1">	
 							<%= link_to image_tag(@debate.avatar.url(:medium)), @debate, class: "image"%>
-							<%= image_tag("ouvert-image.png", alt: "Moutoners", class: "image")%>							
+							<%= image_tag("ouvert-im age.png", alt: "Moutoners", class: "image")%>							
 
 							<div id="stats2">								
 
@@ -196,5 +196,9 @@
 		</br></br>		</br>		</br>
 		</div>
 	</div>
+	<% if @debate.state == "offline"%>
+		<%= @debate.state%>
+		<%= link_to "Mettre en ligne", publish_debate_path(@debate)%>	
+	<% end%>
 </section>
 					
