--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -88,7 +88,7 @@
 					<div class="texte5"><%= link_to current_user.notifications2.count, current_user, class: "texte5"%></div> <div class="texte2">Défi(s) en cours</div>
 				</div>
 				<div class="row" id="stats-profil">
-					<div class="texte5"><%= link_to current_user.challenges_judge.count, current_user, class: "texte5"%></div> <div class="texte2">Jury vacant</div>
+					<div class="texte5"><%= link_to current_user.invitation_request.count, current_user, class: "texte5"%></div> <div class="texte2">Invitations</div>
 				</div>				
 		  </div>
 		  <div id="video2_0">
