--- a/app/views/users/_profile_badge.html.erb
+++ b/app/views/users/_profile_badge.html.erb
@@ -3,6 +3,29 @@
 	<div class="row" id="image1">
 		<%= link_to image_tag(user.avatar.url(:medium)), user, class: "image"%>
 	</div>
+	<% if current_user && current_user == user %>
+		<%= form_for(user) do |f| %>
+		<%= user.content%>
+		  <% if user.errors.any? %>
+		    <div id="error_explanation">
+		      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+		      <ul>
+		      <% user.errors.full_messages.each do |msg| %>
+		        <li><%= msg %></li>
+		      <% end %>
+		      </ul>
+		    </div>
+		  <% end %>
+
+		  <div class="field">
+		    <%= f.file_field :avatar, placeholder: "Rajouter une image", class: "field-image" %>
+		  </div>
+		  <div class="actions">
+		    <%= f.submit "OK", class: "actions2" %>
+		  </div>
+		<% end %>
+	<% end%>
 	<div class="row" id='nom-profile'>
 		<%= link_to user.fitting_name, user, class: 'texte'%>
 	</div>
